--- a/ransim/ransimctrlr/pom.xml
+++ b/ransim/ransimctrlr/pom.xml
@@ -271,7 +271,7 @@
 						</execution>
 					</executions>
 				</plugin>
-                <plugin>
+				<!--  <plugin>
                     <groupId>org.eclipse.m2e</groupId>
                     <artifactId>lifecycle-mapping</artifactId>
                     <version>1.0.0</version>
@@ -294,7 +294,7 @@
                             </pluginExecutions>
                         </lifecycleMappingMetadata>
                     </configuration>
-                </plugin>
+		</plugin> -->
             </plugins>
         </pluginManagement>
 	</build>
